--- a/App.Web/Views/DoctorPole/Followup.cshtml
+++ b/App.Web/Views/DoctorPole/Followup.cshtml
@@ -413,7 +413,7 @@
     <input type="hidden" id="PIN_" name="PIN_" value="@Model.DoctorsPole.PIN" />
     <input type="hidden" id="MobileNo_" name="MobileNo_" value="@Model.DoctorsPole.MobileNo" />
 
-    <input id="save-submit" type="submit" value="Back" class="btn btn-info" />
+    <input id="save-submit" type="submit" value="Back" class="btn btn-bracify font-color-white" />
 }
 
 
