--- a/App.Web/Views/RoleFeature/AddFeature.cshtml
+++ b/App.Web/Views/RoleFeature/AddFeature.cshtml
@@ -17,7 +17,7 @@
         </tr>
     </table>
     <p>
-        <input id="save-submit" type="submit" value="Add" class="btn btn-primary" />
+        <input id="save-submit" type="submit" value="Add" class="btn btn-bracify font-color-white" />
     </p>
 }
 <script type="text/javascript">
