--- a/App.Web/Views/DoctorPole/Create -Copy.cshtml
+++ b/App.Web/Views/DoctorPole/Create -Copy.cshtml
@@ -10,30 +10,28 @@
         OnFailure = "failure"
     };
 }
-
 @using (Ajax.BeginForm("CreateDetail", "DoctorPole", ajaxOpt))
 {
     @Html.ValidationSummary(true)
+    <table class="table table-striped table-bordered fixed_headers">
+        <tr>
+            <th>
+                Staff PIN / Mobile Number
+            </th>
+        </tr>
+        <tr>
+            <td>
+                @Html.TextBoxFor(model => model.PIN_, new { @placeholder = "Staff PIN" })
+                @Html.ValidationMessageFor(model => model.PIN_)
+                OR
+                @Html.TextBoxFor(model => model.MobileNo_, new { @placeholder = "Staff Mobile No" })
+                @Html.ValidationMessageFor(model => model.MobileNo_)
 
-<table class="table table-striped table-bordered fixed_headers">
-    <tr>
-        <th>
-            Staff PIN / Mobile Number
-        </th>
-    </tr>
-    <tr>
-        <td>
-            @Html.TextBoxFor(model => model.PIN_, new { @placeholder = "Staff PIN", @class = "input-group form-control" })
-            @Html.ValidationMessageFor(model => model.PIN_)
-            OR
-            @Html.TextBoxFor(model => model.MobileNo_, new { @placeholder = "Staff Mobile No", @class = "input-group form-control" })
-            @Html.ValidationMessageFor(model => model.MobileNo_)
+                <input id="save-submit" type="submit" value="Next" class="btn btn-primary" />
+            </td>
+        </tr>
 
-            <input id="save-submit" type="submit" value="Next" class="btn btn-bracify font-color-white" />
-        </td>
-    </tr>
-
-</table>
+    </table>
 
 }
 <script type="text/javascript">
