delete the copy files and solve the deopdwn collups issue

--- a/App.Web/Views/DoctorPole/Followup.cshtml
+++ b/App.Web/Views/DoctorPole/Followup.cshtml
@@ -13,6 +13,13 @@
     };
 
 }
+<style type="text/css">
+    .filter-item {
+        width: 20%;
+        padding: 2px;
+        margin: 0 !important;
+    }
+</style>
 @using (Ajax.BeginForm("FollowupSave", "DoctorPole", ajaxOpt))
 {
     @Html.ValidationSummary(true)
