--- a/App.Web/Views/DoctorPole/ReportIndex.cshtml
+++ b/App.Web/Views/DoctorPole/ReportIndex.cshtml
@@ -15,7 +15,9 @@
 }
 <style type="text/css">
     .filter-item {
-        max-width: 200px;
+        width: 11%;
+        padding: 2px;
+        margin: 0 !important;
     }
 </style>
 <div class="page-header">
